<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.sqlliteintro.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_main_fname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fname"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingEnd="16dp"
            />

        <EditText
            android:id="@+id/edit_main_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_main_sname"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/sname"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp"
            />

        <EditText
            android:id="@+id/edit_main_sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_main_marks"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/marks"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp"
            />

        <EditText
            android:id="@+id/edit_main_marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_main_id"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp"
            />

        <EditText
            android:id="@+id/edit_main_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:inputType="number"
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_main_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:paddingEnd="32dp"
        android:layout_weight="1"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_main_viewAll"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_main_update"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="center"
        android:paddingEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="8dp"/>


    <Button
        android:id="@+id/btn_main_delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center"
        android:paddingEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="8dp"/>

</LinearLayout>
</LinearLayout>

